fix(ux:mobile): fix date line break + tags alignment to the right

--- a/sass/slim.scss
+++ b/sass/slim.scss
@@ -554,6 +554,7 @@ button:active,
 .post-date {
   color: #ccc;
   font-size: 14px;
+  white-space: nowrap;
 }
 
 .post-content {
@@ -566,8 +567,8 @@ button:active,
   color: #ccc;
   display: block;
   font-size: 14px;
-  position: relative;
-  left: -30px;
+  margin-right: 15px;
+  text-align: right;
 }
 
 .post-tags a {
